# claude-model-selector

./: README.md  entities.json  mempalace.yaml  pyproject.toml  t.txt
src/claude_model_selector/: __init__.py  __main__.py  cli.py  config.py  models.py  selector.py
tests/: test_all_options.py
